base/mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: mqtt
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
