base/mqtt/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mqtt
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mqtt
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: backend
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: simulator
      ports:
        - protocol: TCP
          port: 1883
